# AutomAccomp

./: index.md
Code/: INSTALL  Makefile.in  RunAutotools.sh  alignm.txt  configure  pth.txt
Code/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
Code/examples/: README.txt
Code/examples/scores/: Forthebeautyoftheearth-all.mid  Forthebeautyoftheearth-solopiano.mid
Code/src/: Makefile.am  Makefile.in
Code/src/CPU/: CPUFunctions.c  CPUFunctions.h  Makefile.am  Makefile.in  ServerCPU.c
Code/src/GPU/: GPUFunctions.cu  GPUFunctions.h  Makefile.am  Makefile.in  ServerGPU.cu  kernels.cuh
Code/src/common/: FileFunctions.c  FileFunctions.h  MacOSSoundFunctions.h  NetFunctions.h  SoundFunctions.h  TempoFunctions.h  TimeFunctions.h  defines.h
Datasets/Admissible misalignment/: A-1-1.mid  A-1-2.mid  A-1-3.mid  A-1-4.mid  A-2-1.mid  A-2-2.mid  A-2-3.mid  A-2-4.mid  A-the_entertainerpnoduet_ori.mid  B-1-1.mid  B-1-2.mid  B-1-3.mid  B-1-4.mid  B-2-1.mid  B-2-2.mid  B-2-3.mid  B-2-4.mid  readme.txt
Datasets/Evaluation files/: readme.txt
Datasets/Evaluation files/00_05/multi/: 1828_k542_2.asco.txt  1828_k542_2.txt  1835_kv_590_3.asco.txt  1835_kv_590_3.txt  2342_vns08_3.asco.txt  2342_vns08_3.txt  2382_qt13_2.asco.txt  2382_qt13_2.txt  id_1828_gt_all.mid  id_1835_gt_all.mid  id_2342_gt_all.mid  id_2382_gt_all.mid
Datasets/Evaluation files/00_05/solo/: 2203_fp-2cou.asco.txt  (+12 more)
Datasets/Optimization/00_05/: id_2411_gt_all.mid
Datasets/Optimization/05_15/: id_2231_gt_all.mid
Datasets/Optimization/15_30/: id_2208_gt_all.mid
(+48 files in other folders)
